@@ -1,8 +1,7 @@
 Newns: module
 {
 	PATH:	con "/dis/lib/newns.dis";
-	#
-	# Build a new namespace from a description file
-	#
+
 	newns:	fn(user: string, nsfile: string): string;
+	newuser:	fn(user: string, cap: string, nsfile: string): string;
 };
